--- a/package.json
+++ b/package.json
@@ -17,8 +17,12 @@
   },
   "homepage": "https://github.com/Nitrat1991/FoodJS#readme",
   "dependencies": {
-    "json-server": "^0.16.3",
     "to": "^0.2.9",
     "update": "^0.7.4"
+  },
+  "devDependencies": {
+    "json-server": "^0.16.3",
+    "webpack": "^5.70.0",
+    "webpack-cli": "^4.9.2"
   }
 }
